# kurs04

./: README.md  config.py  env  main.py  pyproject.toml
cache_json/: cache_hh.json
src/: abstract_class_api.py  mixin_comparison_vacancy.py  vacancy.py  verification.py
src/data_json/: work_with_json.py
src/request/: hh.py  sj.py
