[tool.poetry]
name = "kurs004"
version = "0.1.0"
description = ""
authors = ["nickllama <llama.gradual-0j@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
black = "^23.11.0"
mypy = "^1.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
